add favicon to site

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice Cream</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Seymour+One&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Seymour+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -16,15 +20,15 @@
 
     <include src="./partials/header.html"></include>
 
-      <main>
-        <include src="./partials/hero.html"></include>
-        <include src="./partials/products.html"></include>
-        <include src="./partials/about.html"></include>
-        <include src="./partials/advantages.html"></include>
-        <include src="./partials/gallery.html"></include>
-        <include src="./partials/customer-reviews.html"></include>
-        <include src="./partials/contacts.html"></include>
-      </main>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/products.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/advantages.html"></include>
+      <include src="./partials/gallery.html"></include>
+      <include src="./partials/customer-reviews.html"></include>
+      <include src="./partials/contacts.html"></include>
+    </main>
 
     <include src="./partials/footer.html"></include>
 
@@ -35,6 +39,5 @@
     <include src=""></include>
     <include src=""></include>
     <include src=""></include>
-
   </body>
 </html>
