create modal windows

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,14 @@
 
     <!-- MODAL FORM -->
     <include src=""></include>
+    <include src="./partials/modal-ingredients.html"></include>
     <include src=""></include>
     <include src=""></include>
     <include src=""></include>
-    <include src=""></include>
-    <include src=""></include>
+    <include src="./partials/modal-franchise.html"></include>
+
+    <button class="js-open-modal btn" data-modal="1">modal Ingredients</button>
+    <button class="js-open-modal btn" data-modal="2">modal Franchise</button>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
@@ -58,5 +61,9 @@
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!-- /swiper -->
+
+    <!-- modal windows -->
+    <script src="./js/modal-windows.js"></script>
+    <!-- /modal windows -->
   </body>
 </html>
