--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,13 @@
       <include src="./partials/gallery.html"></include>
       <include src="./partials/customer-reviews.html"></include>
       <include src="./partials/contacts.html"></include>
+      <include src="./partials/modal-read-more.html"></include>
     </main>
 
     <include src="./partials/footer.html"></include>
 
     <!-- MODAL FORM -->
     <include src=""></include>
-    
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
