--- a/src/index.html
+++ b/src/index.html
@@ -43,13 +43,14 @@
     <!-- MODAL FORM -->
     <include src=""></include>
     <include src="./partials/modal-ingredients.html"></include>
-    <include src=""></include>
+    <include src="./partials/modal-product-card.html"></include>
     <include src=""></include>
     <include src=""></include>
     <include src="./partials/modal-franchise.html"></include>
 
     <button class="js-open-modal btn" data-modal="1">modal Ingredients</button>
-    <button class="js-open-modal btn" data-modal="2">modal Franchise</button>
+    <button class="js-open-modal btn" data-modal="2">modal Buy now</button>
+    <button class="js-open-modal btn" data-modal="3">modal Franchise</button>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
