--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Seymour+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Seymour+One&display=swap"
       rel="stylesheet"
     />
     <link
@@ -36,13 +36,23 @@
       <include src="./partials/gallery.html"></include>
       <include src="./partials/customer-reviews.html"></include>
       <include src="./partials/contacts.html"></include>
-      <include src="./partials/modal-read-more.html"></include>
     </main>
 
     <include src="./partials/footer.html"></include>
 
     <!-- MODAL FORM -->
     <include src=""></include>
+    <include src="./partials/modal-ingredients.html"></include>
+    <include src="./partials/modal-product-card.html"></include>
+    <include src=""></include>
+    <include src=""></include>
+    <include src="./partials/modal-franchise.html"></include>
+
+    <button class="js-open-modal btn" data-modal="1">modal Ingredients</button>
+    <button class="js-open-modal btn" data-modal="2">modal Buy now</button>
+    <button class="js-open-modal btn" data-modal="3">modal Read more</button>
+    <button class="js-open-modal btn" data-modal="4">modal Our location</button>
+    <button class="js-open-modal btn" data-modal="5">modal Franchise</button>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
@@ -54,5 +64,9 @@
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!-- /swiper -->
+
+    <!-- modal windows -->
+    <script src="./js/modal-windows.js"></script>
+    <!-- /modal windows -->
   </body>
 </html>
