--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
     <!-- MODAL FORM -->
     <include src=""></include>
-    <include src="./partials/modal-ingredients.html"></include>
+    <!--<include src="./partials/modal-ingredients.html"></include>-->
     <include src="./partials/modal-product-card.html"></include>
     <include src=""></include>
     <include src=""></include>
