--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     <!-- MODAL FORM -->
     <include src=""></include>
     <!--<include src="./partials/modal-ingredients.html"></include>-->
-    <include src="./partials/modal-product-card.html"></include>
+    <include src=""></include>
     <include src=""></include>
     <include src=""></include>
     <include src="./partials/modal-franchise.html"></include>
