--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,13 @@
 
     <!-- MODAL FORM -->
     <include src=""></include>
-    <!--<include src="./partials/modal-ingredients.html"></include>-->
     <include src=""></include>
     <include src=""></include>
+    <include src="./partials/modal-product-card.html"></include>
+
     <include src=""></include>
-    <include src="./partials/modal-franchise.html"></include>
+    <include src="./partials/modal-read-more.html"></include>
+    <include src=""></include>
 
     <button class="js-open-modal btn" data-modal="1">modal Ingredients</button>
     <button class="js-open-modal btn" data-modal="2">modal Buy now</button>
