--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <include src=""></include>
     <include src=""></include>
     <include src=""></include>
-    <include src="./partials/modal-product-card.html"></include>
+    <include src=""></include>
 
     <include src=""></include>
     <include src="./partials/modal-read-more.html"></include>
