--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Seymour+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Seymour+One&display=swap"
       rel="stylesheet"
     />
     <link
@@ -50,7 +50,9 @@
 
     <button class="js-open-modal btn" data-modal="1">modal Ingredients</button>
     <button class="js-open-modal btn" data-modal="2">modal Buy now</button>
-    <button class="js-open-modal btn" data-modal="3">modal Franchise</button>
+    <button class="js-open-modal btn" data-modal="3">modal Read more</button>
+    <button class="js-open-modal btn" data-modal="4">modal Our location</button>
+    <button class="js-open-modal btn" data-modal="5">modal Franchise</button>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
