--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,8 @@
     <include src="./partials/footer.html"></include>
 
     <!-- MODAL FORM -->
-    <include src=""></include>
-    <include src=""></include>
-    <include src=""></include>
-    <include src=""></include>
-    <include src=""></include>
-    <include src=""></include>
+    <include src="./partials/modal.html"></include>
+    
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
