--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <button class="js-open-modal btn" data-modal="2">modal Buy now</button>
     <button class="js-open-modal btn" data-modal="3">modal Read more</button>
     <button class="js-open-modal btn" data-modal="4">modal Our location</button>
-    <button class="js-open-modal btn" data-modal="5">modal Franchise</button>-->
+    <button class="js-open-modal btn" data-modal="5">modal Franchise</button>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
