--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
       <include src="./partials/gallery.html"></include>
       <include src="./partials/customer-reviews.html"></include>
       <include src="./partials/contacts.html"></include>
-      <include src="./partials/modal-franchise.html"></include>
+      <!--<include src="./partials/modal-franchise.html"></include>-->
     </main>
 
     <include src="./partials/footer.html"></include>
