--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
+    <script src="./js/modal.js"></script>
+
     <script>
       new WOW().init();
     </script>
