error correction modal-product-card
Не працює підсвітка помилок. Не підхватює js

--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,16 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!-- /swiper -->
 
+    <!-- validation-highlight -->
+    <script src="./js/validation-highlight.js"></script>
+    <!-- /validation-highlight -->
+    
     <!-- modal windows -->
     <script src="./js/modal-windows.js"></script>
     <!-- /modal windows -->
+
+    <!-- validation-highlight -->
+    <script src="./js/validation-highlight.js"></script>
+    <!-- /validation-highlight -->
   </body>
 </html>
