--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
 
     <!-- MODAL FORM -->
     <include src="./partials/modal.html"></include>
+    <include src="./partials/modal-franchise.html"></include>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
