--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,8 @@
       <include src="./partials/products.html"></include>
       <include src="./partials/about.html"></include>
       <include src="./partials/advantages.html"></include>
-      <include src="./partials/customer-reviews.html">
         <include src="./partials/gallery.html"></include>
-      </include>
+      <include src="./partials/customer-reviews.html"></include>
       <include src="./partials/contacts.html"></include>
     </main>
 
