--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
     <include src="./partials/modal.html"></include>
     <include src="./partials/modal-franchise.html"></include>
     <include src="./partials/modal-location.html"></include>
+    <include src="./partials/modal-read-more.html"></include>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
