--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <include src="./partials/about.html"></include>
       <include src="./partials/advantages.html"></include>
       <include src="./partials/gallery.html"></include>
-      <include src="./partials/customer-reviews.html"></include>
+      <!-- <include src="./partials/customer-reviews.html"></include> -->
       <include src="./partials/contacts.html"></include>
     </main>
 
