Прикрутив одне меню

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,8 @@
     <include src="./partials/modal-franchise.html"></include>
     <include src="./partials/modal-location.html"></include>
     <include src="./partials/modal-read-more.html"></include>
+    <include src="./partials/modal-product-card.html"></include>
+    <include src="./partials/modal-ingredients.html"></include>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
@@ -100,7 +102,7 @@
     <!-- validation-highlight -->
     <script src="./js/validation-highlight.js"></script>
     <!-- /validation-highlight -->
-    
+
     <!-- modal windows -->
     <script src="./js/modal-windows.js"></script>
     <!-- /modal windows -->
