add button to top

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       <!-- <include src="./partials/customer-reviews.html"></include> -->
       <include src="./partials/contacts.html"></include>
     </main>
-
+    <include src="./partials/arrow_to_top.html"></include>
     <include src="./partials/footer.html"></include>
 
     <!-- MODAL FORM -->
@@ -100,5 +100,6 @@
     <!-- modal windows -->
     <script src="./js/modal-windows.js"></script>
     <!-- /modal windows -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   </body>
 </html>
