--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,8 @@
     <include src="./partials/modal-read-more.html"></include>
     <include src="./partials/modal-product-card.html"></include>
     <include src="./partials/modal-ingredients.html"></include>
+    <include src="./partials/modal-ingredients1.html"></include>
+    <include src="./partials/modal-ingredients2.html"></include>
 
     <!-- wow JS -->
     <script src="./js/wow.min.js"></script>
@@ -99,17 +101,9 @@
     </script>
     <!-- /swiper -->
 
-    <!-- validation-highlight -->
-    <script src="./js/validation-highlight.js"></script>
-    <!-- /validation-highlight -->
-
     <!-- modal windows -->
     <script src="./js/modal-windows.js"></script>
     <!-- /modal windows -->
 
-    <!-- validation-highlight -->
-    <script src="./js/validation-highlight.js"></script>
-    <!-- /validation-highlight -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   </body>
 </html>
